updated with quantity box of interactive type; includes tryout profile